--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/rafaelsmiguelsantos/advanced-node-ts/issues"
   },
-  "homepage": "https://github.com/rafaelsmiguelsantos/advanced-node-ts#readme"
+  "homepage": "https://github.com/rafaelsmiguelsantos/advanced-node-ts#readme",
+  "devDependencies": {
+    "module-alias": "^2.2.2",
+    "typescript": "^4.7.3"
+  },
+  "engines": {
+    "node": "16.x"
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2"
+  }
 }
