chore: add strict mode typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,10 @@
         "*"
       ],
       "@/tests/*": ["../tests/*"]
-    }
+    },
+  "strict": true
   },
   "include": [
     "src"
-  ]
+  ],
 }
