--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "advanced-node-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "node dist/main/api",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsc"
   },
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/rafaelsmiguelsantos/advanced-node-ts#readme",
   "devDependencies": {
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "^17.0.41",
     "module-alias": "^2.2.2",
     "typescript": "^4.7.3"
   },
