--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.ts",
   "scripts": {
     "start": "node dist/main/api",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   },
   "homepage": "https://github.com/rafaelsmiguelsantos/advanced-node-ts#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -30,7 +33,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "jest": "^28.1.1",
     "module-alias": "^2.2.2",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.3"
   },
   "engines": {
