--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^28.1.1",
+    "lint-staged": "^13.0.1",
     "module-alias": "^2.2.2",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.3"
