--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
+    "jest-mock-extended": "^2.0.6",
     "lint-staged": "^13.0.1",
     "module-alias": "^2.2.2",
     "ts-jest": "^28.0.4",
